@@ -15,7 +15,7 @@ set_time_limit(0);
 define('PKG_NAME','CodeMirror');
 define('PKG_NAMESPACE',strtolower(PKG_NAME));
 define('PKG_VERSION','1.0.0');
-define('PKG_RELEASE','rc1');
+define('PKG_RELEASE','pl');
 
 /* define sources */
 $root = dirname(dirname(__FILE__)).'/';
